--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       content="FloodSafe turns SAR satellite data and AI into life-saving flood insights for researchers, government, and NGOs in Bangladesh. Monitor floods in 3D, find safe shelters, and save lives."
     />
     <meta name="author" content="FloodSafe" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
+      rel="stylesheet" -->
     />
 
     <meta property="og:title" content="FloodSafe — From Space to Safety" />
